# To-Do-App

./: .gitignore  CLAUDE.md  pyproject.toml  ruff.toml
.claude/agents/: hackathon-judge-reviewer.md  python-cli-expert.md  todo-domain-agent.md  todo-spec-manager.md
.claude/commands/: sp.validate-requirements.md
.claude/skills/: qa-acceptance-validation.skill.md  qa-spec-review.skill.md  qa-test-case-design.skill.md
.specify/memory/: constitution.md
history/prompts/001-todo-cli-core/: 001-todo-cli-core-specification.spec.prompt.md  002-todo-cli-implementation-plan.plan.prompt.md  003-todo-cli-task-generation.tasks.prompt.md  004-todo-cli-implementation-complete.green.prompt.md  005-todo-cli-git-commit.misc.prompt.md  006-todo-cli-refactor-simple-menu.refactor.prompt.md  007-todo-cli-unit-tests.misc.prompt.md
history/prompts/002-todo-cli-persistence/: 0001-todo-cli-persistence-spec.spec.prompt.md  0002-todo-cli-persistence-plan.plan.prompt.md  0003-todo-cli-persistence-tasks.tasks.prompt.md
history/prompts/constitution/: 001-todo-cli-constitution-creation.constitution.prompt.md
specs/001-todo-cli-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-core/checklists/: requirements.md
specs/001-todo-cli-core/contracts/: cli-contract.md
specs/002-todo-cli-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-cli-persistence/checklists/: requirements.md
specs/002-todo-cli-persistence/contracts/: cli-contract.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_service.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_storage.py  test_task.py  test_task_service.py  test_validators.py
